eclipse-workspace/padmini/AlRayan/Zensar Sandbox Full Components/src/objects/Dummy_Account__c.object
<CustomObject>
    <fields>
        <fullName>AccountLookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Dummy Accounts</relationshipLabel>
        <relationshipName>Dummy_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Of_Birth__c</fullName>
        <label>Date Of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deposit_Amount__c</fullName>
        <label>Deposit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Dummy Account</label>
    <nameField>
        <label>Dummy Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dummy Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>